k8s/nextcloud/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: nextcloud
          image: docker.io/library/nextcloud:30.0.0@sha256:9419220db5c193336b340c376a4fae64d677553c508be9c44908a2ed8869310a
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
          volumeMounts:
            - name: volume
              mountPath: /var/www/html
          ports:
            - name: http
              containerPort: 80
