k8s/nextcloud/resources/nextcloud.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
        - name: oidc-config
          secret:
            secretName: nextcloud-oidc-config-secret
      containers:
        - name: nextcloud
          image: docker.io/library/nextcloud:29
          resources:
            limits:
              memory: 4G
          volumeMounts:
            - name: data-volume
              mountPath: /var/www/html
            # - name: oidc-config
            #   subPath: oidc.config.php
            #   mountPath: /var/www/html/config/oidc.config.php
            #   readOnly: true
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
