k8s/nextcloud/resources/external-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    gethomepage.dev/href: 'https://nextcloud.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: nextcloud
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: nextcloud
    gethomepage.dev/name: Nextcloud
    external-dns.alpha.kubernetes.io/target: external.durbin.casa
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: X-Forwarded-For
    nginx.ingress.kubernetes.io/server-snippet: |-
      server_tokens off;
      proxy_hide_header X-Powered-By;

      rewrite ^/.well-known/webfinger /public.php?service=webfinger last;
      rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
      rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json;
      location = /.well-known/carddav {
        return 301 $scheme://$host/remote.php/dav;
      }
      location = /.well-known/caldav {
        return 301 $scheme://$host/remote.php/dav;
      }
      location = /robots.txt {
        allow all;
        log_not_found off;
        access_log off;
      }
      location ~ ^/(?:build|tests|config|lib|3rdparty|templates|data)/ {
        deny all;
      }
      location ~ ^/(?:autotest|occ|issue|indie|db_|console) {
        deny all;
      }
spec:
  ingressClassName: external
  rules:
    - host: &host nextcloud.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
